# zycus-project

./: .env  RAGMethodology.md  README.md  agent.py  data.py  generate_presentation.py  main.py  p.ipynb  pptx_tools.py  pyproject.toml  test_charts.py
presentations/: Monthly_Synthesis_2026-07-09.pptx
reports/: Titan_2026-07-09.json  UniSan_2026-07-09.json
