[project]
name = "zycus-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "env>=0.1.0",
    "ipython>=9.15.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "python-pptx>=1.0.2",
    "requests>=2.34.2",
]
